# CC-dev

./: README.md
eclipse-workspace/01_mosiop/: CMakeLists.txt
eclipse-workspace/01_mosiop/docs/: ocp_formulation.odf
eclipse-workspace/01_mosiop/main/inc/: mpc.h  plot.h
eclipse-workspace/01_mosiop/main/src/: CMakeLists.txt  main.cpp  mpc.cpp
eclipse-workspace/01_mosiop/nmpc/inc/: debug.h  mpc.h  nlp.h  ocp.h
eclipse-workspace/01_mosiop/nmpc/src/: CMakeLists.txt  debug.cpp  mpc.cpp  nlp.cpp  ocp.cpp
eclipse-workspace/01_mosiop/solver/inc/: debug.h  nlp.h  ocp.h
eclipse-workspace/01_mosiop/solver/src/: CMakeLists.txt  debug.cpp  nlp.cpp  ocp.cpp
eclipse-workspace/01_mpc_cstr/: README.md
eclipse-workspace/01_mpc_cstr/mosiop/: CMakeLists.txt
eclipse-workspace/01_mpc_cstr/mosiop/main/: CMakeLists.txt
eclipse-workspace/01_mpc_cstr/mosiop/main/inc/: debug.h
eclipse-workspace/01_mpc_cstr/mosiop/main/src/: CMakeLists.txt  debug.cpp  main.cpp
eclipse-workspace/01_mpc_cstr/mosiop/nmpc/inc/: math.h  mpc.h  nlp.h  ocp.h
eclipse-workspace/01_mpc_cstr/mosiop/nmpc/src/: CMakeLists.txt  mpc.cpp  nlp.cpp  ocp.cpp
